--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -1,6 +1,15 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\todo[inline]{
+General tips:\\
+  Switch passive voice and we to I\\
+  Re-spell acronyms at the beginning of Chapter\\
+Chapter tips:\\
+  Check if corrections align with Ich's partials so far\\
+  \textbf{STOP} working on it until then\\
+  Work and release ch4, ch5 improved variants
+}
 \section{Methodology}
 \label{sec:methodology}
 
