--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -1,6 +1,16 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\todo[inline]{
+General tips:\\
+  Switch passive voice and we to I\\
+  Re-spell acronyms at the beginning of Chapter\\
+ Chapter tips:\\
+   Split GPU port pytorch and cupy\\
+   Why is CuPy BSS acceleration good? param search and also evaluation\\
+   Add table of evaluated stuff (slicqt, stft window sizes) before boxplot)\\
+   More redundancy (restate hypothesis, goals)
+}
 \section{Experiment}
 \label{sec:experiment}
 
