--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -1,6 +1,11 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\todo[inline]{
+General tips:\\
+  Switch passive voice and we to I\\
+  Re-spell acronyms at the beginning of Chapter
+}
 \section{Introduction}
 \label{sec:intro}
 
