--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -1,6 +1,15 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\todo[inline]{
+General tips:\\
+  Switch passive voice and we to I\\
+  Re-spell acronyms at the beginning of Chapter\\
+ Chapter tips:\\
+   Split GPU port pytorch and cupy\\
+   Why is CuPy BSS acceleration good? param search and also evaluation\\
+   More redundancy (restate hypothesis, goals)
+}
 \section{Discussion and conclusion}
 
 In this section, we will discuss the results shown in Section \ref{sec:experiment}, and conclude this thesis.
