--- a/latex/report.tex
+++ b/latex/report.tex
@@ -1,5 +1,6 @@
 \documentclass[letter,12pt,notitlepage]{article}
 \usepackage[svgnames]{xcolor}
+\usepackage{soul}
 \usepackage{subfiles}
 \usepackage[left=4cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage[shortlabels]{enumitem}
