First half of ch3 corrections

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -68,12 +68,12 @@ Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music d
 
 \subsection{Contribution and results}
 
-\hl{The first contribution of this thesis is the adaptation of the reference} Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine or deep learning model.
+My first contribution in this thesis is the adaptation of the reference Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, which I released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine or deep learning model.
 
-\hl{The second contribution of this thesis is the adaptation of the reference} Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing \parencite{umx} to use the sliCQT. Ideas were also incorporated from CrossNet-OpenUnmix \parencite{xumx}, which is a further evolution of Open-Unmix. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a successful neural network which performs the task of music demixing using the sliCQT. It scored lower in its music demixing performance than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research.
+My second contribution in this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing \parencite{umx} to use the sliCQT. Ideas were also incorporated from CrossNet-OpenUnmix \parencite{xumx}, which is a further evolution of Open-Unmix. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a successful neural network which performs the task of music demixing using the sliCQT. It scored lower in its music demixing performance than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research.
 
 \subsection{Outline}
 
-\hl{This thesis is organized as follows. Chapter two covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. It also presents an overview of machine learning for audio and music signals, an introduction to a few recurring software and Python code concepts, and a survey on the history of music source separation and music demixing. Chapter three describes the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. Chapter four shows the experimental results, and chapter five discusses the results and concludes the thesis.}
+This thesis is organized as follows. In Chapter two, I will cover the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQT. I will also present an overview of machine learning for audio and music signals, an introduction to a few recurring software and Python code concepts, and a survey on the history of music source separation and music demixing. In Chapter three, I will describe the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQT inside Open-Unmix. In chapter four, I will show the experimental results, and in chapter five I will discuss the results and conclude the thesis.
 
 \end{document}
